I fixed a problem with the input elements sticking out off the end of their div block in the logIn form: mainStyle.css

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,74 +1,74 @@
 form{ 
-        font-family: arial;
-        background-color: gray;
+    font-family: arial;
+    background-color: gray;
 }
 
 #logInDiv{
-        margin-right:0px;
-        margin-left:auto;
-        display:block;
-        width: 250px;
+    margin-right:0px;
+    margin-left:auto;
+    display:block;
+    width: 265px;
 	height: 50px;
 }
 
 
 #signUp {
-        display:block
-        margin-right:auto;
-        margin-left:auto;
+    display:block
+    margin-right:auto;
+    margin-left:auto;
 
 }
 
 #createAccountDiv{
-        float:right;
-        width: 600px;
+    float:right;
+    width: 600px;
 	height: 1000px;
-        padding-top: 100px;
+    padding-top: 100px;
 }
 
 
 #createAccount input{
-        display:inline;
-        margin-left:10px;
+    display:inline;
+    margin-left:10px;
 }
 
 #Flavorholder{
 
-        border: 5px solid black;
-        margin-right:auto;
-        margin-left:auto;
-        display:block;
-        width:800px;
-        height:160px;
-        overflow:scroll;
-       /*table-layout:fixed;*/
+    border: 5px solid black;
+    margin-right:auto;
+    margin-left:auto;
+    display:block;
+    width:800px;
+    height:160px;
+    verflow:scroll;
+    /*table-layout:fixed;*/
 }
 #Flavor{
 
-        table-layout:fixed;
+    table-layout:fixed;
 }
 .submitButton{
-        float: right
+    float: right
 }
 
 #createAccountDiv h1{
-        text-align: center;
+    text-align: center;
 }
 
 
 #Flavor td {
-        border: 1px solid black;
+    border: 1px solid black;
 }
 
 #toppings {
 	
 	margin-right:auto;
-        margin-left:auto;	
-        display:block;
-        width: 500px;
+    margin-left:auto;	
+    display:block;
+    width: 500px;
 }
 #toppings * {
 	margin-right:auto;
-        margin-left:auto;
+    margin-left:auto;
 }
 
